; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bhnd/bcma/extr_bcma_subr.c_bcma_alloc_dinfo.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bhnd/bcma/extr_bcma_subr.c_bcma_alloc_dinfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bcma_devinfo = type { i32, i32, i64, i32, i32*, i32* }

@M_BHND = common dso_local global i32 0, align 4
@M_NOWAIT = common dso_local global i32 0, align 4
@M_ZERO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.bcma_devinfo* @bcma_alloc_dinfo(i32 %0) #0 {
  %2 = alloca %struct.bcma_devinfo*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.bcma_devinfo*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* @M_BHND, align 4
  %6 = load i32, i32* @M_NOWAIT, align 4
  %7 = load i32, i32* @M_ZERO, align 4
  %8 = or i32 %6, %7
  %9 = call %struct.bcma_devinfo* @malloc(i32 40, i32 %5, i32 %8)
  store %struct.bcma_devinfo* %9, %struct.bcma_devinfo** %4, align 8
  %10 = load %struct.bcma_devinfo*, %struct.bcma_devinfo** %4, align 8
  %11 = icmp eq %struct.bcma_devinfo* %10, null
  br i1 %11, label %12, label %13

12:                                               ; preds = %1
  store %struct.bcma_devinfo* null, %struct.bcma_devinfo** %2, align 8
  br label %29

13:                                               ; preds = %1
  %14 = load %struct.bcma_devinfo*, %struct.bcma_devinfo** %4, align 8
  %15 = getelementptr inbounds %struct.bcma_devinfo, %struct.bcma_devinfo* %14, i32 0, i32 5
  store i32* null, i32** %15, align 8
  %16 = load %struct.bcma_devinfo*, %struct.bcma_devinfo** %4, align 8
  %17 = getelementptr inbounds %struct.bcma_devinfo, %struct.bcma_devinfo* %16, i32 0, i32 4
  store i32* null, i32** %17, align 8
  %18 = load %struct.bcma_devinfo*, %struct.bcma_devinfo** %4, align 8
  %19 = getelementptr inbounds %struct.bcma_devinfo, %struct.bcma_devinfo* %18, i32 0, i32 0
  store i32 -1, i32* %19, align 8
  %20 = load %struct.bcma_devinfo*, %struct.bcma_devinfo** %4, align 8
  %21 = getelementptr inbounds %struct.bcma_devinfo, %struct.bcma_devinfo* %20, i32 0, i32 3
  %22 = call i32 @STAILQ_INIT(i32* %21)
  %23 = load %struct.bcma_devinfo*, %struct.bcma_devinfo** %4, align 8
  %24 = getelementptr inbounds %struct.bcma_devinfo, %struct.bcma_devinfo* %23, i32 0, i32 2
  store i64 0, i64* %24, align 8
  %25 = load %struct.bcma_devinfo*, %struct.bcma_devinfo** %4, align 8
  %26 = getelementptr inbounds %struct.bcma_devinfo, %struct.bcma_devinfo* %25, i32 0, i32 1
  %27 = call i32 @resource_list_init(i32* %26)
  %28 = load %struct.bcma_devinfo*, %struct.bcma_devinfo** %4, align 8
  store %struct.bcma_devinfo* %28, %struct.bcma_devinfo** %2, align 8
  br label %29

29:                                               ; preds = %13, %12
  %30 = load %struct.bcma_devinfo*, %struct.bcma_devinfo** %2, align 8
  ret %struct.bcma_devinfo* %30
}

declare dso_local %struct.bcma_devinfo* @malloc(i32, i32, i32) #1

declare dso_local i32 @STAILQ_INIT(i32*) #1

declare dso_local i32 @resource_list_init(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
